k8s/interaction/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-service
spec:
  selector:
    app: interaction-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
