k8s/interaction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interaction-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - interaction.local
    secretName: interaction-tls
  rules:
  - host: interaction.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interaction-service
            port:
              number: 5000
